--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".activities.ProfileActivity"></activity>
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.SignUpActivity" />
+        <activity android:name=".activities.TravelHistoryActivity"/>
         <activity android:name=".activities.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
