--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity android:name=".activities.SearchActivity"></activity>
         <activity android:name=".activities.OthersProfileActivity" />
         <activity android:name=".activities.ProfileActivity" />
-        <activity android:name=".activities.NotificationActivity" />
+        <activity android:name=".activities.AllChatsActivity" />
         <activity android:name=".activities.ChatActivity"/>
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.SignUpActivity" />
