--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name=".activities.SearchActivity"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".activities.TripPlanningActivity"></activity>
+        <activity android:name=".activities.SearchActivity" />
         <activity android:name=".activities.OthersProfileActivity" />
         <activity android:name=".activities.ProfileActivity" />
         <activity android:name=".activities.AllChatsActivity" />
-        <activity android:name=".activities.ChatActivity"/>
+        <activity android:name=".activities.ChatActivity" />
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.SignUpActivity" />
         <activity android:name=".activities.TravelHistoryActivity" />
@@ -30,6 +31,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
